add secondary site for testing on multi-site

--- a/src/MBran.Error404.Test/Views/Error404.cshtml
+++ b/src/MBran.Error404.Test/Views/Error404.cshtml
@@ -1,5 +1,7 @@
 ﻿@inherits UmbracoViewPage<Error404>
 
 <div class="page-components">
+    <h1>@Model.TextMediaTitle</h1>
     <h2>Windows shutting down....</h2>
+    <p>@Model.TextMediaSummary</p>
 </div>
